# books-project

./: .gitignore  README.md  pyproject.toml
backend/: .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/books/: emails.py  filters.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/books/migrations/: 0001_initial.py
backend/books/tests/integration/: test_books.py  test_csv_upload.py  test_ingestion_logs.py  test_tasks.py
backend/books/tests/unit/: test_filters.py  test_models.py  test_serializers.py  test_utils.py
backend/config/: settings.py  urls.py
backend/reservations/: enums.py  models.py  serializers.py  views.py
backend/reservations/migrations/: 0001_initial.py
backend/reservations/tests/integration/: test_reservations.py
books/: models.py  services.py  tasks.py  views.py
books/migrations/: 0001_initial.py
config/: __init__.py  celery.py  settings.py  urls.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  axios.ts  books.ts  reservations.ts
frontend/src/components/: BookDetailsForm.tsx  BookItemCard.tsx  BookReservations.tsx  NavIcons.tsx  ProtectedRoute.tsx  Rating.tsx  ReservationDrawer.tsx  ReservationModal.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: BookDetailsPage.tsx  BookListPage.tsx  FileUploadPage.tsx  Login.tsx
frontend/src/types/: Book.ts  Reservation.ts
frontend/src/utils/: formatting.ts
reservations/: serializers.py  urls.py
(+3 files in other folders)
